# home-plumbing

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  mise.toml  readme.md  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: docker-build-push-comdirect-auth.yaml  docker-build-push.yaml  release-please.yaml
src/: .dockerignore
src/comdirect-auth/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/comdirect-auth/src/comdirect_auth/: .gitignore  main.py
src/plumbing_airflow/: .dockerignore  .gitignore  :w  CHANGELOG.md  Dockerfile  README.md  __init__.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
src/plumbing_airflow/dags/: .airflowignore  __init__.py  comdirect_auth.py  comdirect_refresh_token.py
src/plumbing_airflow/dags/plumbing_airflow/: __init__.py
src/plumbing_airflow/dags/plumbing_airflow/comdirect/: __init__.py  auth.py  categorization.py  data.py  refresh_token.py
src/plumbing_airflow/dags/plumbing_airflow/shared/: __init__.py  dag_config.py
src/plumbing_airflow/database/: comdirect.db
src/plumbing_core/: .gitignore  README.md  main.py  pyproject.toml
src/plumbing_core/examples/: comdirect_account_balances.py  comdirect_accounts.py  comdirect_auth.py  comdirect_categorize.py  comdirect_transactions.py  comdirect_transactions_from_last_date.py
src/plumbing_core/src/plumbing_core/: __init__.py
src/plumbing_core/src/plumbing_core/destinations/: __init__.py
src/plumbing_core/src/plumbing_core/destinations/sqlite/: __init__.py  config.py  connection.py  readers.py  writers.py
src/plumbing_core/src/plumbing_core/destinations/turso/: __init__.py  config.py  connection.py  readers.py  writers.py
src/plumbing_core/src/plumbing_core/processors/: __init__.py
src/plumbing_core/src/plumbing_core/processors/categorization/: __init__.py  categorize_transactions.py  config.py  types.py
src/plumbing_core/src/plumbing_core/shared/: __init__.py  schemas.py
src/plumbing_core/src/plumbing_core/sources/: __init__.py
src/plumbing_core/src/plumbing_core/sources/comdirect/: __init__.py  auth.py  constants.py  data.py  helpers.py  schemas.py  types.py
src/plumbing_core/tests/: test_schemas.py
