[project]
name = "plumbing-airflow"
version = "0.3.3"
description = "Plumbing Airflow - plumbing things together in an orchestrated manner"
readme = "README.md"
authors = [{ name = "Jonathan Schwarzhaupt", email = "jonathan@example.com" }]
requires-python = ">=3.12"
dependencies = [
 "logfire[httpx]>=4.3.3",
 "plumbing-core",
 "apache-airflow[celery,fab,postgres,redis]==3.1.0",
]

[dependency-groups]
dev = ["ruff>=0.12.3"]

[tool.uv.sources]
plumbing-core = { path = "../plumbing_core" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dags/plumbing_airflow"]
