[project]
name = "plumbing-core"
version = "0.0.1"
description = "My core plumbing code"
readme = "README.md"
authors = [{ name = "Jonathan Schwarzhaupt", email = "jonathan@example.com" }]

requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.3.1",
  "httpx>=0.28.1",
  "libsql>=0.1.6",
  "logfire[httpx]>=4.2.0",
  "pandas>=2.3.0",
  "pendulum>=3.1.0",
  "pydantic>=2.11.4",
  "pydantic-ai-slim[anthropic]>=0.6.2",
  "pydantic-ai[logfire]>=0.6.2",
  "pydantic-settings>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
